@@ -736,3 +736,13 @@ else:
 
         return test
 
+class filterWarnings (object):
+    def __init__(self, kind, category):
+        self._kind = kind
+        self._category = category
+
+    def __enter__(self):
+        warnings.filterwarnings(self._kind, category=self._category)
+
+    def __exit__(self, type, value, tp):
+        del warnings.filters[0]
